--- a/feriaonline-backend/src/main/resources/application.properties
+++ b/feriaonline-backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=feria-backend
+# Conexión a MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/Feria_Online_Tpq_DB?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA (Hibernate)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
