--- a/feriaonline-backend/pom.xml
+++ b/feriaonline-backend/pom.xml
@@ -82,7 +82,12 @@
 			<artifactId>jjwt-jackson</artifactId> <!-- Para usar Jackson como serializador -->
 			<version>0.11.5</version>
 			<scope>runtime</scope>
-		</dependency>				
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.5.5.Final</version>
+		</dependency>						
 	</dependencies>
 
 	<build>
