--- a/feriaonline-backend/pom.xml
+++ b/feriaonline-backend/pom.xml
@@ -87,7 +87,11 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>1.5.5.Final</version>
-		</dependency>						
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		  </dependency>						
 	</dependencies>
 
 	<build>
