--- a/feriaonline-backend/src/main/resources/application.properties
+++ b/feriaonline-backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Puerto del servidor backend
+server.port=8080
+
 # Conexión a MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/Feria_Online_Tpq_DB?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
@@ -10,3 +13,18 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# CORS para permitir acceso desde frontend (React en 5173)
+spring.web.cors.allowed-origins=http://localhost:5173
+
+#¿Cómo generar una clave secreta JWT segura?
+#Puedes generar una clave secreta en consola con OpenSSL o usar cualquier generador base64. Por ejemplo:
+#openssl rand -base64 64
+
+# Configuración para jwt
+application:
+  security:
+    jwt:
+      secret-key: ${JWT_SECRET_KEY}
+      expiration: 86400000
+      refresh-token:
+        expiration: 604800000
