correccion de variables

--- a/feriaonline-backend/src/main/resources/application.properties
+++ b/feriaonline-backend/src/main/resources/application.properties
@@ -21,10 +21,6 @@ spring.web.cors.allowed-origins=http://localhost:5173
 #openssl rand -base64 64
 
 # Configuración para jwt
-application:
-  security:
-    jwt:
-      secret-key: ${JWT_SECRET_KEY}
-      expiration: 86400000
-      refresh-token:
-        expiration: 604800000
+application.security.jwt.secret-key=${JWT_SECRET_KEY}
+application.security.jwt.expiration=86400000
+application.security.jwt.refresh-token.expiration=604800000
