--- a/feriaonline-backend/src/main/resources/application.properties
+++ b/feriaonline-backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de JPA (Hibernate)
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -21,6 +21,6 @@ spring.web.cors.allowed-origins=http://localhost:5173
 #openssl rand -base64 64
 
 # Configuración para jwt
-application.security.jwt.secret-key=${JWT_SECRET_KEY}
+application.security.jwt.secret-key=${SECRET_KEY}
 application.security.jwt.expiration=86400000
 application.security.jwt.refresh-token.expiration=604800000
