--- a/feriaonline-backend/src/main/resources/application.properties
+++ b/feriaonline-backend/src/main/resources/application.properties
@@ -7,10 +7,14 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Desactivar los Hibernate de la consola
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=off
+logging.level.org.hibernate.type.descriptor.sql=off
+
 # Configuración de JPA (Hibernate)
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # CORS para permitir acceso desde frontend (React en 5173)
