--- a/feriaonline-backend/src/main/resources/application.properties
+++ b/feriaonline-backend/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.web.cors.allowed-origins=http://localhost:5173
 application.security.jwt.secret-key=${SECRET_KEY}
 application.security.jwt.expiration=86400000
 application.security.jwt.refresh-token.expiration=604800000
+
+#variable de sistema de Java para obtener desde donde se ejecuta mi aplicacion.
+app.upload.dir=${user.dir}/uploads
