--- a/feriaonline-backend/src/main/resources/application.properties
+++ b/feriaonline-backend/src/main/resources/application.properties
@@ -31,3 +31,9 @@ application.security.jwt.refresh-token.expiration=604800000
 
 #variable de sistema de Java para obtener desde donde se ejecuta mi aplicacion.
 app.upload.dir=${user.dir}/uploads
+
+
+#Para manejo de archivos
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
